--- a/top/index.html
+++ b/top/index.html
@@ -241,8 +241,16 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
-		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/alipay.aspx" target="mainframe2">红包管理</a></span></li>		
-	</ul>
+		<li><span> <a 
+href="http://haoping.7fshop.com/top/reviewnew/alipayadd.aspx" target="mainframe2">导入
+支付宝红包</a></span></li>		
+		<li><span> <a 
+href="http://haoping.7fshop.com/top/reviewnew/alipay.aspx" target="mainframe2">支付宝红
+包赠送记录</a></span></li>		
+		<li><span> <a 
+href="http://haoping.7fshop.com/top/reviewnew/alipaymsgsend.aspx" target="mainframe2">
+手动赠送</a></span></li>		
+    </ul>
 </div>
 
 
@@ -515,9 +523,9 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
     }
 
     if (parseInt(10 * Math.random()) % 2 == 0) {
-        setTimeout('showArea()', 3000);
+        //setTimeout('showArea()', 3000);
     } else {
-        setTimeout('showArea1()', 3000);
+        //setTimeout('showArea1()', 3000);
     }
 
     selectTab();
