--- a/top/index.html
+++ b/top/index.html
@@ -242,14 +242,11 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li><span> <a 
-href="http://haoping.7fshop.com/top/reviewnew/alipayadd.aspx" target="mainframe2">导入
-支付宝红包</a></span></li>		
+href="http://haoping.7fshop.com/top/reviewnew/alipayadd.aspx" target="mainframe2">导入支付宝红包</a></span></li>		
 		<li><span> <a 
-href="http://haoping.7fshop.com/top/reviewnew/alipay.aspx" target="mainframe2">支付宝红
-包赠送记录</a></span></li>		
+href="http://haoping.7fshop.com/top/reviewnew/alipay.aspx" target="mainframe2">支付宝红包赠送记录</a></span></li>		
 		<li><span> <a 
-href="http://haoping.7fshop.com/top/reviewnew/alipaymsgsend.aspx" target="mainframe2">
-手动赠送</a></span></li>		
+href="http://haoping.7fshop.com/top/reviewnew/alipaymsgsend.aspx" target="mainframe2">手动赠送</a></span></li>		
     </ul>
 </div>
 
