--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -129,6 +129,7 @@
                                                     -</button>
                                             </h3>
                                             <ul class="group">
+                                                <li><span><a href="http://ding.7fshop.com/default2.aspx" target="mainframe6">数据总览</a></span></li>
                                                 <li><span><a href="http://ding.7fshop.com/default.aspx" target="mainframe6">店铺统计总览</a></span></li>
                                                 <li><span><a href="http://ding.7fshop.com/CreateCode.aspx" target="mainframe6">获取统计代码</a></span></li>
                                                 <li><span><a href="http://ding.7fshop.com/BackTotal.aspx" target="mainframe6">二次销售分析</a></span></li>
