--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -113,6 +113,7 @@
                     <li></li>
                 </ul>
             </div>
+            <div><img src='Images/banner.gif' /></div>
             <div id="content1">
                 <div id="tabCot_product">
                     <!--area6-->
