--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -152,6 +152,8 @@
                                                 <li><span><a href="http://ding.7fshop.com/VisitTotal.aspx" target="mainframe6">浏览统计(天)</a></span></li>
                                                 <li><span><a href="http://ding.7fshop.com/PageVisitTotal.aspx" target="mainframe6">页面访问分析</a></span></li>
                                                 <li><span><a href="http://ding.7fshop.com/TopGoods.aspx" target="mainframe6">宝贝浏览分析</a></span></li>
+                                                <li><span><a href="http://ding.7fshop.com/ZhiTongPV.aspx" target="mainframe6">直通车流量</a></span></li>
+                                                <li><span><a href="http://ding.7fshop.com/ZuanZhanPV.aspx" target="mainframe6">钻展流量</a></span></li>
                                             </ul>
                                         </div>
                                         <div class="menu-box">
