--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -110,7 +110,7 @@
                             alt="有问题请点这里" /></a>
                 </p>
                 <ul class="quick-menu">
-                    <li></li>
+                    <li><a href="help/help.html" target="mainframe6">使用说明</a></li>
                 </ul>
             </div>
             <div><img src='Images/banner.jpg' /></div>
