--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -110,7 +110,7 @@
                             alt="有问题请点这里" /></a>
                 </p>
                 <ul class="quick-menu">
-                    <li><a href="help/help.html" target="mainframe6">使用说明</a></li>
+                    <li><a href="help/help.html" target="mainframe6">帮助教程</a></li>
                 </ul>
             </div>
             <div><img src='Images/banner.jpg' /></div>
@@ -164,6 +164,17 @@
                                             </h3>
                                             <ul class="group">
                                                 <li><span><a href="http://ding.7fshop.com/PingjiaTotal.aspx" target="mainframe6">评价分析</a></span></li>
+                                            </ul>
+                                        </div>
+                                        
+                                        <div class="menu-box">
+                                            <h3 class="mytaobao-bar">
+                                                <span>使用说明 </span>
+                                                <button class="menu-close">
+                                                    -</button>
+                                            </h3>
+                                            <ul class="group">
+                                                <li><span><a href="http://ding.7fshop.com/help/help.html" target="mainframe6">帮助教程</a></span></li>
                                             </ul>
                                         </div>
                                     </div>
