--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -139,7 +139,8 @@
                                                 <li><span><a href="http://ding.7fshop.com/HourOrdersTotal.aspx" target="mainframe6">
                                                     销售统计(小时)</a></span></li>
                                                 <li><span><a href="http://ding.7fshop.com/SellCityTop.aspx" target="mainframe6">销售城市排行</a></span></li>
-                                                 <li><span><a href="http://ding.7fshop.com/AskOrderTotal.aspx" target="mainframe6">询单/下单数查看</a></span></li>
+                                                <li><span><a href="http://ding.7fshop.com/AskOrderTotal.aspx" target="mainframe6">询单/下单数查看</a></span></li>
+                                                <li><span><a href="http://ding.7fshop.com/GoodsCountTotal.aspx" target="mainframe6">销售单价查看</a></span></li>
                                             </ul>
                                         </div>
                                         <div class="menu-box">
