--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -142,6 +142,7 @@
                                                 <li><span><a href="http://ding.7fshop.com/AskOrderTotal.aspx" target="mainframe6">询单/下单数查看</a></span></li>
                                                 <li><span><a href="http://ding.7fshop.com/GoodsCountTotal.aspx" target="mainframe6">销售单价查看</a></span></li>
                                                 <li><span><a href="http://ding.7fshop.com/CustomerBuyTotal.aspx" target="mainframe6">客单价查看</a></span></li>
+                                                 <li><span><a href="http://ding.7fshop.com/ZhuanHuaTotal.aspx" target="mainframe6">转化率查看</a></span></li>
                                             </ul>
                                         </div>
                                         <div class="menu-box">
