--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -158,6 +158,8 @@
                                                 <li><span><a href="http://ding.7fshop.com/TopGoods.aspx" target="mainframe6">宝贝浏览分析</a></span></li>
                                                 <li><span><a href="http://ding.7fshop.com/ZhiTongPV.aspx" target="mainframe6">直通车流量</a></span></li>
                                                 <li><span><a href="http://ding.7fshop.com/ZuanZhanPV.aspx" target="mainframe6">钻展流量</a></span></li>
+                                                <li><span><a href="http://ding.7fshop.com/ZhiTongHourPV.aspx" target="mainframe6">直通车流量(小时)</a></span></li>
+                                                <li><span><a href="http://ding.7fshop.com/ZhiTongHourPV.aspx" target="mainframe6">钻展流量(小时)</a></span></li>
                                             </ul>
                                         </div>
                                         <div class="menu-box">
