--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -160,6 +160,7 @@
                                                 <li><span><a href="http://ding.7fshop.com/ZuanZhanPV.aspx" target="mainframe6">钻展流量</a></span></li>
                                                 <li><span><a href="http://ding.7fshop.com/ZhiTongHourPV.aspx" target="mainframe6">直通车流量(小时)</a></span></li>
                                                 <li><span><a href="http://ding.7fshop.com/ZhiTongHourPV.aspx" target="mainframe6">钻展流量(小时)</a></span></li>
+                                                <li><span><a href="http://ding.7fshop.com/AskOrderCustomer.aspx" target="mainframe6">询单客户列表</a></span></li>
                                             </ul>
                                         </div>
                                         <div class="menu-box">
