--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -198,7 +198,7 @@
                     <!--area6end-->
                 </div>
             </div>
-            <div id="footer">
+            <div id="footer" style="position:relative">
                 <div id="copyright">
                     Copyright &copy; 2010-2012 tetesoft.com 版权所有
                     <br />
