--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -28,6 +28,9 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
             </li>       
         </ul>
     </div>
+</div>
+
+    <div><img src='images/banner.jpg' /></div>
 
 
 <div id="content1">
