--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -30,7 +30,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
     </div>
 </div>
 
-    <div><img src='images/banner.jpg' /></div>
+    <div><img src='sale/images/banner.jpg' /></div>
 
 
 <div id="content1">
