--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -21,17 +21,18 @@
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=叶儿随清风&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
 align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清风&site=cntaobao&s=1&charset=utf-8" alt="有问题请点这里" /></a>
         
-            亲，欢迎光临  <a href='logout.aspx'>退出</a>
+            亲，欢迎光临二次销售魔方  <a href='logout.aspx'>【点击退出】</a>
         </p>
         <ul class="quick-menu">
             <li>
+                <a href='top/sale/help.html' target="mainframe2">帮助中心</a>
             </li>       
         </ul>
     </div>
 </div>
 
-    <div><img src='sale/images/banner.jpg' /></div>
-
+    <div style="margin-left:30px;"><img src='sale/images/banner.jpg' /></div>
+     
 
 <div id="content1">
 
