--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -52,9 +52,11 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">评价列表</a></span></li>		
+		href="http://haoping.7fshop.com/top/sale/setting.aspx" target="mainframe2">基本设置</a></span></li>	
 		<li><span> <a
-		href="http://haoping.7fshop.com/top/sale/couponsend.aspx" target="mainframe2">赠送记录</a></span></li>		
+		href="http://haoping.7fshop.com/top/sale/reviewlist.aspx" target="mainframe2">评价列表</a></span></li>		
+			<li><span> <a
+		href="http://haoping.7fshop.com/top/sale/kefulist.aspx" target="mainframe2">审核赠送</a></span></li>	
 </ul>
 </div>
 
@@ -63,8 +65,27 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
+    <li><span> <a href="http://haoping.7fshop.com/top/sale/alipayadd.aspx" target="mainframe2">创建红包</a></span></li>	
     <li><span> <a href="http://haoping.7fshop.com/top/sale/alipay.aspx" target="mainframe2">支付宝红包</a></span></li>	
-    <li><span> <a href="http://haoping.7fshop.com/top/sale/alipaydetail.aspx" target="mainframe2">赠送记录</a></span></li>	
+</ul>
+</div>
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 手机优惠券 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+<li><span> <a
+		href="http://haoping.7fshop.com/top/sale/msglist.aspx" target="mainframe2">赠送记录</a></span></li>	
+</ul>
+</div>
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 再买返现 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">    <li><span> <a href="http://haoping.7fshop.com/top/sale/alipaydetail.aspx" target="mainframe2">赠送记录</a></span></li>	
+
 </ul>
 </div>
 
