--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -89,6 +89,18 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
 </ul>
 </div>
 
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 帮助中心 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">    
+<li><span> <a href="http://haoping.7fshop.com/top/sale/helpalipay.html" target="mainframe2">支付宝红包教程</a></span></li>
+<li><span> <a href="http://haoping.7fshop.com/top/sale/help.html" target="mainframe2">使用教程</a></span></li>	
+
+</ul>
+</div>
+
 </div>
 <!--content-->
             </div>
