--- a/top/indexsale.html
+++ b/top/indexsale.html
@@ -25,7 +25,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=叶儿随清
         </p>
         <ul class="quick-menu">
             <li>
-                <a href='top/sale/help.html' target="mainframe2">帮助中心</a>
+                <a href='http://haoping.7fshop.com/top/sale/help.html' target="mainframe2">帮助中心</a>
             </li>       
         </ul>
     </div>
