--- a/top/sale/help.html
+++ b/top/sale/help.html
@@ -21,6 +21,7 @@
     </ul>
   </div>
     <div id="main-content">
+        <div style="height:400px; overflow:scroll;">
         1、在这里设计是否对卖家赠送红包<br />
         <img src="images/1.jpg" /><br />
         
@@ -41,6 +42,7 @@
         
         7、在这里查看支付宝红包赠送记录<br />
         <img src="images/7.jpg" /><br />
+    </div>
     </div>
     </div>
 
