--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -33,9 +33,11 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
             </li>       
         </ul>
     </div>
-
+    
+    <div style="margin-left:30px;"><img src='reviewnew/images/banner4yue.jpg' /></div>
 
 <div id="content1">
+
 
 <div id="tabCot_product" class="tab">
 <div class="tabContainer">
@@ -46,8 +48,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
    <li><a href="javascript:void(0)" title="营销推广" rel="1">营销推广</a></li>
    <li><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
    <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
-   <li><a href="javascript:void(0)" title="移动客户端" rel="4">移动客户端</a></li>
-   <li><a href="javascript:void(0)" title="客户关系营销" rel="5">客户关系营销</a></li>
+   <li><a href="javascript:void(0)" title="客户关系营销" rel="4">客户关系营销</a></li>
    <li><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
 </ul>
 </div>
@@ -228,6 +229,19 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
     </ul>
 </div>
 
+
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 支付宝红包 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/alipayadd.aspx" target="mainframe2">导入支付宝红包</a></span></li>		
+		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/alipay.aspx" target="mainframe2">支付宝红包赠送记录</a></span></li>		
+		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/alipaymsgsend.aspx" target="mainframe2">手动赠送</a></span></li>		
+    </ul>
+</div>
+
 </div>
 <!--content-->
             </div>
@@ -240,51 +254,10 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </div>
 
 
+
+
+
 <div id="tabCot_product_4" class="tabCot" style="padding:2px 0 0 0; display:none">
-    <div id="mytaobao-panel" class="grid-c2">
-        <div class="col-sub">
-            <div id="mytaobao-menu" class="box-diamond">
-<!--content-->
-
-<div class="mytaobao-bd">
-
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 移动客户端 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://www.7fshop.com/top/market/build.aspx" target="mainframe3">下载二维码</a></span></li>
-		<li><span> <a
-		href="http://www.7fshop.com/top/market/build.aspx" target="mainframe3">店铺数据更新</a></span></li>
-		<li><span> <a
-		href="http://www.7fshop.com/top/market/build.aspx" target="mainframe3">广告设置</a></span></li>	
-		<li><span> <a
-		href="http://www.7fshop.com/top/market/build.aspx" target="mainframe3">宝贝分类设置</a></span></li>
-		<li><span> <a
-		href="http://www.7fshop.com/top/market/build.aspx" target="mainframe3">客户管理</a></span></li>
-        <li><span> <a
-		href="http://www.7fshop.com/top/market/build.aspx" target="mainframe3">移动消息营销</a></span></li>		
-    </ul>
-</div>
-
-</div>
-<!--content-->
-            </div>
-        </div>
-        
-        <div style="width:780px; margin-left:10px; float:left; height:1220px;">
-                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" name="mainframe3" src="http://www.7fshop.com/top/market/mshop.aspx" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-</div>
-
-
-
-
-
-<div id="tabCot_product_5" class="tabCot" style="padding:2px 0 0 0; display:none">
     <div id="mytaobao-panel" class="grid-c2">
         <div class="col-sub">
             <div id="mytaobao-menu" class="box-diamond">
@@ -501,7 +474,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
         document.getElementById("ggArea").style.display = "none";
     }
 
-    setTimeout('showArea()', 3000);
+    //setTimeout('showArea()', 3000);
 </script>
 
 </body>
