--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -42,7 +42,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
 <div id="tabCot_product" class="tab">
 <div class="tabContainer">
 <div style="float:left; width:161px;">
-    <img alt="特特营销推广专家" src="images/logo.jpg" width="150" height="40" />
+    <img alt="特特营销推广专家" src="images/logo.png" width="150" height="40" />
 </div>
 <ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:10px;">
    <li><a href="javascript:void(0)" title="营销推广" rel="1">营销推广</a></li>
