--- a/top/reviewnew/qubie.html
+++ b/top/reviewnew/qubie.html
@@ -54,8 +54,20 @@
     <td><div align="center">√</div></td>
     <td><div align="center">√</div></td>
   </tr>
+  <tr>
+    <td height="24"><div align="right">支付宝红包</div></td>
+    <td><div align="center">X</div></td>
+    <td><div align="center">√</div></td>
+    <td><div align="center">√</div></td>
+  </tr>
     <tr>
     <td height="24"><div align="right">好评客服审核</div></td>
+    <td><div align="center">X</div></td>
+    <td><div align="center">X</div></td>
+     <td><div align="center">√</div></td>
+  </tr>
+    <tr>
+    <td height="24"><div align="right">内容自动判定</div></td>
     <td><div align="center">X</div></td>
     <td><div align="center">X</div></td>
      <td><div align="center">√</div></td>
