--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -441,41 +441,193 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 
 
 <div style="display:none">
-<script src="http://s15.cnzz.com/stat.php?id=2663320&web_id=2663320&show=pic" 
-
-language="JavaScript"></script>
-</div>
-<div id="divBackground" style="position: absolute; display:none; top: 0pt; left: 0pt; background: none repeat scroll 0% 0% rgb(153, 153, 153); opacity: 0.4; width: 100%; height: 2184px; z-index: 10002;"></div>
-<div id="ggArea" style="display:none; position: absolute; display:none; top: 220px; left: 400px;  z-index: 10003; background-color:white; padding:5px">
-    <a href='javascript:closeArea();' style="font-size:16px; font-weight:bold; color:black">关闭窗口</a> 20秒后窗口自动关闭.. <br>
-<span style="font-size:18px; font-weight:bold; color:red;">新年送大礼，手机客户端最低只要9元<br>让您的网店直入驻买家手机</span><br>
-<a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-7:1' target='_blank'><img src='images/gg1.jpg' border=0></a>
-<a href='http://fuwu.taobao.com/item/subsc.htm?items=service-0-22762-6:1' target='_blank'><img src='images/gg2.jpg' border=0></a><br>
-<span style="font-size:16px;">具体情况请联系客服 <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%
-
-E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" ><img border="0" 
-
-align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6%9D%9C%E8%
-
-8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" alt="联系客服" /></a></span>
+<script src="http://s15.cnzz.com/stat.php?id=2663320&web_id=2663320&show=pic" language="JavaScript"></script>
 </div>
 
-<script>
-    function showArea() {
-        document.getElementById("divBackground").style.display = "block";
-        document.getElementById("divBackground").style.filter = "alpha(opacity=50)";
-        document.getElementById("ggArea").style.display = "block";
+<div id="div1" style="position: absolute; display:none; top: 0pt; left: 0pt; 
 
-        setTimeout('closeArea()', 20000);
+background: none repeat scroll 0% 0% rgb(153, 153, 153); opacity: 0.4; width: 100%; height: 
+
+2184px; z-index: 10002;"></div>
+<div id="div2" style="display:none; position: absolute; display:none; top: 50px; left: 
+
+100px;  z-index: 10003;">
+    <a href='javascript:closeArea11();' style="font-size:16px; font-weight:bold; color:white">关闭窗口</a> 60秒后窗口自动关闭.. <br>
+    <div style="BACKGROUND-COLOR:#fff; width:350px; height:120px;  padding:10px;">
+    <span style="font-size:14px; font-weight:bold;">订购服务后，很多卖家因主旺旺跳转子帐号，因设置错误导致功能无法正常使用，客服联系不上！</span><br />
+    <%if (versionpub == "2" || versionpub == "3")
+      { %>
+    <span style="font-size:13px; font-weight:bold; color:red">将以下资料补充完毕者并验证通过后，可以联系客服获得我们送出的100条短信 ：）</span><br />
+    <%} %>
+    请输入您的手机号码：
+    <br />
+    <input type="text" id="phone" name="phone" style="height:20px; width:150px;" /> 
+    
+    <br />
+    请输入您的QQ号码：
+    <br />
+    <input type="text" id="qq" name="qq" style="height:20px; width:150px;" />  <input type="button" onclick="savephone()" style="width:60px; height:24px;" value="马上提交" />
+
+    </div>
+</div>
+
+<script language="javascript" type="text/javascript">
+    function showArea(str) {
+        if (str == 0) { 
+            document.getElementById("couponArea").style.display = "none";
+        }else if(str == 1){
+            document.getElementById("couponArea").style.display = "block";
+        }
     }
 
-    function closeArea() {
-        document.getElementById("divBackground").style.display = "none";
-        document.getElementById("ggArea").style.display = "none";
+    function showAreaAli(str) {
+        if (str == 0) { 
+            document.getElementById("aliArea").style.display = "none";
+        }else if(str == 1){
+            document.getElementById("aliArea").style.display = "block";
+        }
     }
 
-    //setTimeout('showArea()', 3000);
+    function showArea1(str) {
+        if (str == 0) { 
+            document.getElementById("itemArea").style.display = "none";
+        }else if(str == 1){
+            document.getElementById("itemArea").style.display = "block";
+        }
+    }
+
+    function check() {
+        if (document.getElementById("mindate").value == "") {
+            alert("请填写可查询物流评价时间");
+            document.getElementById("mindate").focus();
+            return false;
+        }
+        
+        if (document.getElementById("maxdate").value == "") {
+            alert("不可查询物流评价时间");
+            document.getElementById("maxdate").focus();
+            return false;
+        }
+        return checkConfirm();
+    }
+
+    function checkConfirm(){
+        if(document.getElementById("coupon2").checked == true){
+            return confirm('您选择了不自动赠送优惠券，系统将无法自动帮您赠送优惠券，您确定吗？');
+        }
+
+        if(document.getElementById("kefu1").checked == true){
+            return confirm('您开启了评价客服审核，所有的评价都需要您手动进入我们服务审核才会自动赠送优惠券，您确定吗？');
+        }
+
+        return true;
+    }
+
+    function OpenDialogLable(url, w, h, editTxt) {
+        if (typeof (editTxt) == "undefined") {
+            editTxt = "";
+        }
+        if (navigator.appVersion.indexOf("MSIE") == -1) {
+            this.returnAction = function (strResult) {
+                if (strResult != null) {
+                    if (strResult != "") {
+                        document.getElementById("productArea").innerHTML = strResult;
+                    }
+                }
+            }
+            window.open(url + '?d=' + Date() + "&t=" + escape(editTxt), 'newWin', 'modal=yes,width=' + w + ',height=' + h + ',top=200,left=300,resizable=no,scrollbars=no');
+            return;
+        } else {
+            var GetValue = showModalDialog(url + '?d=' + Date() + "&t=" + escape(editTxt), null, 'dialogWidth:' + w + 'px; dialogHeight:' + h + 'px;')
+            if (GetValue != null) {
+                if (GetValue != "") {
+                    document.getElementById("productArea").innerHTML = GetValue;
+                    //alert(document.getElementById("html").value);
+                }
+            }
+        }
+    }
+
+    var xmlHttp;
+    var itemsStr;
+    var itemsStrTxt;
+    function createxmlHttpRequest() {
+        if (window.ActiveXObject)
+            xmlHttp = new ActiveXObject("Microsoft.XMLHTTP");
+        else if (window.XMLHttpRequest)
+            xmlHttp = new XMLHttpRequest();
+    }
+
+    function getResultStr(str) {
+        createxmlHttpRequest();
+
+        //获取当前使用样式
+        var style = "0";
+
+        var queryString = "/top/reviewnew/taobaoitem.aspx?act=getResultStr&isradio=1&style=" + style + "&ids=" + str + "&t=" + new Date().getTime();
+        xmlHttp.open("GET", queryString);
+        xmlHttp.onreadystatechange = handleStateChangeResultStr;
+        xmlHttp.send(null);
+    }
+
+    function handleStateChangeResultStr() {
+        if (xmlHttp.readyState == 4 && xmlHttp.status == 200) {
+            document.getElementById("productArea").innerHTML = xmlHttp.responseText;
+        }
+    }
+
+    /* if ("<%=itemid %>" != "") {
+        getResultStr("<%=itemid %>");
+    }*/
+
+    function showAreaPhone() {
+        document.getElementById("div1").style.display = "block";
+        document.getElementById("div1").style.filter = "alpha(opacity=50)";
+        document.getElementById("div2").style.display = "block";
+
+        setTimeout('closeArea11()', 60000);
+    }
+
+    function closeArea11() {
+        document.getElementById("div1").style.display = "none";
+        document.getElementById("div2").style.display = "none";
+    }
+
+    function savephone() {
+        var phone = document.getElementById("phone").value;
+        var qq = document.getElementById("qq").value;
+
+        var reg = /^0{0,1}(13[0-9]|14[0-9]|15[0-9]|18[0-9])[0-9]{8}$/;
+        if (!reg.test(phone)) {
+            alert('请输入正确的手机号码，谢谢您的合作！');
+            document.getElementById('phone').focus();
+            return false;
+        }
+
+        if (isNaN(qq)){
+            alert('请输入正确的QQ号码，谢谢您的合作！');
+            document.getElementById('qq').focus();
+            return false;
+        }
+
+        var url = "http://haoping.7fshop.com/top/reviewnew/setting.aspx?act=savephone&phone=" + phone +"&qq=" + qq;
+
+        createxmlHttpRequest();
+        var queryString = url + "&t=" + new Date().getTime();
+        xmlHttp.open("GET", queryString);
+        xmlHttp.onreadystatechange = handleStateChangeCat;
+        xmlHttp.send(null);
+    }
+
+    function handleStateChangeCat() {
+        if (xmlHttp.readyState == 4 && xmlHttp.status == 200) {
+            alert('保存成功，谢谢您的合作，请联系客服人员验证联系方式并获取短信奖励！');
+            closeArea11();
+        }
+    }
 </script>
+
+<script language="javascript" src="reviewnew/js_isshow.aspx" type="text/javascript"></script>
 
 </body>
 </html>
