--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -449,11 +449,9 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 background: none repeat scroll 0% 0% rgb(153, 153, 153); opacity: 0.4; width: 100%; height: 
 
 2184px; z-index: 10002;"></div>
-<div id="div2" style="display:none; position: absolute; display:none; top: 50px; left: 
-
-100px;  z-index: 10003;">
+<div id="div2" style="display:none; position: absolute; display:none; top: 280px; left: 480px;  z-index: 10003;">
     <a href='javascript:closeArea11();' style="font-size:16px; font-weight:bold; color:white">关闭窗口</a> 60秒后窗口自动关闭.. <br>
-    <div style="BACKGROUND-COLOR:#fff; width:350px; height:120px;  padding:10px;">
+    <div style="BACKGROUND-COLOR:#fff; width:350px; height:220px;  padding:10px;">
     <span style="font-size:14px; font-weight:bold;">订购服务后，很多卖家因主旺旺跳转子帐号，因设置错误导致功能无法正常使用，客服联系不上！</span><br />
     <%if (versionpub == "2" || versionpub == "3")
       { %>
