--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -71,7 +71,7 @@
                 if (XMLHttpReq.status == 200) { // 信息已经成功返回，开始处理信息
                     closeDiv();
                     if (XMLHttpReq.responseText == "true")
-                        document.getElementById("mainframe6id").src = "Default2.aspx";
+                        document.getElementById("mainframe6id").src = "tijian/index.html";
                     else
                         alert(XMLHttpReq.responseText);
                 } else { //页面不正常
