--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -165,6 +165,18 @@
                                         </div>
                                         <div class="menu-box">
                                             <h3 class="mytaobao-bar">
+                                                <span>网站体检 </span>
+                                                <button class="menu-close">
+                                                    -</button>
+                                            </h3>
+                                            <ul class="group">
+                                                <li><span><a href="http://ding.7fshop.com/tijian/SetTijianParam.aspx" target="mainframe6">体检参数设置</a></span></li>
+                                                 <li><span><a href="http://ding.7fshop.com/tijian/index.html" target="mainframe6">立即体检</a></span></li>
+                                            </ul>
+                                        </div>
+                                        
+                                        <div class="menu-box">
+                                            <h3 class="mytaobao-bar">
                                                 <span>评价统计 </span>
                                                 <button class="menu-close">
                                                     -</button>
