--- a/top/DataAnalysis/DataAnalysis.Web/indextongji.html
+++ b/top/DataAnalysis/DataAnalysis.Web/indextongji.html
@@ -165,7 +165,7 @@
                                         </div>
                                         <div class="menu-box">
                                             <h3 class="mytaobao-bar">
-                                                <span>网站体检 </span>
+                                                <span>店铺体检 </span>
                                                 <button class="menu-close">
                                                     -</button>
                                             </h3>
