--- a/top/CustomerServiceAchievements/Search.Web/index.html
+++ b/top/CustomerServiceAchievements/Search.Web/index.html
@@ -40,58 +40,58 @@
 
     <script type="text/javascript">
 
-//        var XMLHttpReq;
-//        function createXMLHttpRequest() {
-//            if (window.XMLHttpRequest) { //Mozilla 浏览器
-//                XMLHttpReq = new XMLHttpRequest();
-//            }
-//            else if (window.ActiveXObject) { // IE浏览器
-//                try {
-//                    XMLHttpReq = new ActiveXObject("Msxml2.XMLHTTP");
-//                } catch (e) {
-//                    try {
-//                        XMLHttpReq = new ActiveXObject("Microsoft.XMLHTTP");
-//                    } catch (e) { }
-//                }
-//            }
-//        }
+        var XMLHttpReq;
+        function createXMLHttpRequest() {
+            if (window.XMLHttpRequest) { //Mozilla 浏览器
+                XMLHttpReq = new XMLHttpRequest();
+            }
+            else if (window.ActiveXObject) { // IE浏览器
+                try {
+                    XMLHttpReq = new ActiveXObject("Msxml2.XMLHTTP");
+                } catch (e) {
+                    try {
+                        XMLHttpReq = new ActiveXObject("Microsoft.XMLHTTP");
+                    } catch (e) { }
+                }
+            }
+        }
 
-//        //发送匹配请求函数
-//        function DoFetch() {
-//            createXMLHttpRequest();
-//            var url = "FetchOrderTotal.aspx";
-//            XMLHttpReq.open("GET", url, true);
-//            XMLHttpReq.onreadystatechange = processFetchResponse; //指定响应函数
-//            XMLHttpReq.send(null); // 发送请求
-//        }
+        //发送匹配请求函数
+        function DoFetch() {
+            createXMLHttpRequest();
+            var url = "InitData.aspx";
+            XMLHttpReq.open("GET", url, true);
+            XMLHttpReq.onreadystatechange = processFetchResponse; //指定响应函数
+            XMLHttpReq.send(null); // 发送请求
+        }
 
-//        // 处理返回匹配信息函数
-//        function processFetchResponse() {
-//            if (XMLHttpReq.readyState == 4) { // 判断对象状态
-//                if (XMLHttpReq.status == 200) { // 信息已经成功返回，开始处理信息
-//                    closeDiv();
-//                    if (XMLHttpReq.responseText == "true")
-//                        document.getElementById("mainframe6id").src = "tijian/index.html";
-//                    else
-//                        alert(XMLHttpReq.responseText);
-//                } else { //页面不正常
-//                    window.alert("您所请求的页面有异常。");
-//                }
-//            }
-//        }
-//    
-//        //显示层
-//        window.onload = function() {
-//            show();
-//            DoFetch();
-//        }
-//         function show() {
-//             document.getElementById("div").style.display = "block";
-//        }
-//        //隐藏层
-//        function closeDiv() {
-//            document.getElementById("div").style.display = "none";
-//        }
+        // 处理返回匹配信息函数
+        function processFetchResponse() {
+            if (XMLHttpReq.readyState == 4) { // 判断对象状态
+                if (XMLHttpReq.status == 200) { // 信息已经成功返回，开始处理信息
+                    closeDiv();
+                    if (XMLHttpReq.responseText == "true")
+                        document.getElementById("mainframe6id").src = "CreateKeyWord.aspx";
+                    else
+                        alert(XMLHttpReq.responseText);
+                } else { //页面不正常
+                    window.alert("您所请求的页面有异常。");
+                }
+            }
+        }
+    
+        //显示层
+        window.onload = function() {
+            show();
+            DoFetch();
+        }
+         function show() {
+             document.getElementById("div").style.display = "block";
+        }
+        //隐藏层
+        function closeDiv() {
+            document.getElementById("div").style.display = "none";
+        }
         
     </script>
 
