--- a/top/indexcui.html
+++ b/top/indexcui.html
@@ -52,55 +52,21 @@
 <div class="mytaobao-bd">
 
 <div class="menu-box">
-<h3 class="mytaobao-bar"><span> 营销推广 </span>
+<h3 class="mytaobao-bar"><span> 催单有礼 </span>
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="market/addidea.aspx" target="mainframe">我要推广</a></span></li>
+		href="market/addidea.aspx" target="mainframe">基本设置</a></span></li>
 		<li ><span> <a
-		href="market/idealist.aspx" target="mainframe">推广管理
+		href="market/idealist.aspx" target="mainframe">未付款订单
 	</a></span></li>				<li><span> <a
-		href="market/result.aspx" target="mainframe">投放结果分析
+		href="market/result.aspx" target="mainframe">催单短信发送
 	</a></span></li>		<li><span> <a
-		href="market/redirect.aspx" target="_blank">博客营销
+		href="market/redirect.aspx" target="_blank">催单成交记录
 	</a></span></li>		</ul>
 </div>
 
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 帮助中心 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-	<li ><span> <a
-		href="http://seller.taobao.com/fuwu/shopshow/shop_index.htm?page_id=184868&isv_id=204200856&page_rank=3&tab_type=2" target="_blank">服务介绍
-	</a></span></li>	
-	<li ><span> <a
-		href="http://seller.taobao.com/fuwu/shopshow/shop_index.htm?page_id=185339&isv_id=204200856&page_rank=4&tab_type=2" target="_blank">服务优势
-	</a></span></li>
-	
-		<li><span> <a
-		href="../help/index.html" target="mainframe">如何创建推广</a></span></li>
-		<li ><span> <a
-		href="../help/index.html" target="mainframe">查看推广效果
-	</a></span></li>		
-				
-		<li><span> <a
-		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" style="font-weight:bold">查看帮助教程</a></span></li>
-				</ul>	
-
-				</ul>
-</div>
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 意见反馈 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" style="color:Red; font-weight:bold">我有建议要提交</a></span></li>
-
-</div>
 
 
 </div>
