--- a/top/indexkai.html
+++ b/top/indexkai.html
@@ -57,6 +57,8 @@
 </h3>
 <ul class="group">
 		<li ><span> <a
+		href="kaixiang/couponlist.aspx" target="mainframe">二维码设置</a></span></li>	
+		<li ><span> <a
 		href="kaixiang/couponlist.aspx" target="mainframe">优惠券管理</a></span></li>		
 		<li ><span> <a
 		href="kaixiang/couponsend.aspx" target="mainframe">优惠券赠送记录</a></span></li>		
@@ -64,18 +66,6 @@
 		href="kaixiang/msgsend.aspx" target="mainframe">手动赠送</a></span></li>		
     </ul>
 </div>
-
-
-
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 帮助教程 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">	
-		<li><span> <a
-		href="http://bangpai.taobao.com/group/thread/1091516-266680296.htm" target="_blank"">查看详细帮助教程</a></span></li>
-</div>
-
 
 </div>
 
