--- a/top/indexbao.html
+++ b/top/indexbao.html
@@ -21,7 +21,7 @@
          </p>
         <ul class="quick-menu">
             <li>
-                <a href="top/bao/help.html" target="mainframe">帮助中心</a>
+                <a href="bao/help.html" target="mainframe">帮助中心</a>
             </li>       
         </ul>
     </div>
