--- a/top/indexcui.html
+++ b/top/indexcui.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
-    <title>特特营销推广专家</title>
+    <title>催单有礼</title>
     <link href="css/css.css" rel="stylesheet" />
     <link href="css/member.css" rel="stylesheet" />
 </head>
@@ -15,10 +15,12 @@
 	    <p class="login-info">
             在线客服：
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" ><img border="0" align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" alt="有问题请点这里" /></a>
+        
+            亲，欢迎光临催单有礼  <a href='logout.aspx'>【点击退出】</a>
          </p>
         <ul class="quick-menu">
             <li>
-                <a href="../help/index.html#" target="mainframe">帮助中心</a>
+                <a href="cui/index.html#" target="mainframe">帮助中心</a>
             </li>       
         </ul>
     </div>
@@ -29,10 +31,10 @@
 
 <table cellpadding=0 cellspacing=0 width="100%">
     <tr>
-        <td><img alt="特特营销推广专家" src="images/logo.jpg" width="192" />
+        <td><img alt="催单有礼" src="images/logo.jpg" width="192" />
 	</td>
         <td style="padding-left:20px;">
-	<img alt="特特营销推广专家" src="images/banner.gif" /></td>
+	<img alt="催单有礼" src="images/banner.gif" /></td>
     </tr>
 </table>
 
@@ -57,13 +59,13 @@
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="market/addidea.aspx" target="mainframe">基本设置</a></span></li>
+		href="http://haoping.7fshop.com/top/cui/setting.aspx" target="mainframe">基本设置</a></span></li>
 		<li ><span> <a
-		href="market/idealist.aspx" target="mainframe">未付款订单
+		href="http://haoping.7fshop.com/top/cui/reviewlist.aspx" target="mainframe">未付款订单
 	</a></span></li>				<li><span> <a
-		href="market/result.aspx" target="mainframe">催单短信发送
+		href="http://haoping.7fshop.com/top/cui/sendlist.aspx" target="mainframe">催单短信发送
 	</a></span></li>		<li><span> <a
-		href="market/redirect.aspx" target="_blank">催单成交记录
+		href="http://haoping.7fshop.com/top/cui/suclist.aspx" target="_blank">催单成交记录
 	</a></span></li>		</ul>
 </div>
 
@@ -75,7 +77,7 @@
         </div>
         
         <div style="width:780px; margin-left:10px; float:left; height:1220px;">
-                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" name="mainframe" src="market/addidea.aspx" frameborder="0" scrolling="no"></iframe>
+                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" name="mainframe" src="http://haoping.7fshop.com/top/cui/setting.aspx" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
