--- a/top/indexcui.html
+++ b/top/indexcui.html
@@ -63,7 +63,7 @@
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/cui/reviewlist.aspx" target="mainframe">未付款订单
 	</a></span></li>				<li><span> <a
-		href="http://haoping.7fshop.com/top/cui/sendlist.aspx" target="mainframe">催单短信发送
+		href="http://haoping.7fshop.com/top/cui/msglist.aspx" target="mainframe">催单短信发送
 	</a></span></li>		<li><span> <a
 		href="http://haoping.7fshop.com/top/cui/suclist.aspx" target="_blank">催单成交记录
 	</a></span></li>		</ul>
