--- a/top/indexcui.html
+++ b/top/indexcui.html
@@ -65,7 +65,7 @@
 	</a></span></li>				<li><span> <a
 		href="http://haoping.7fshop.com/top/cui/msglist.aspx" target="mainframe">催单短信发送
 	</a></span></li>		<li><span> <a
-		href="http://haoping.7fshop.com/top/cui/suclist.aspx" target="_blank">催单成交记录
+		href="http://haoping.7fshop.com/top/cui/suclist.aspx" target="mainframe">催单成交记录
 	</a></span></li>		</ul>
 </div>
 
