--- a/top/CustomerServiceAchievements/Search.Web/index.html
+++ b/top/CustomerServiceAchievements/Search.Web/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>营销决策</title>
+    <title>店铺关键字监控</title>
     <link href="css/css1.css" rel="stylesheet" />
     <link href="css/member.css" rel="stylesheet" />
     <style type="text/css">
@@ -113,7 +113,7 @@
                     <li><a href="help/help.html" target="mainframe6">帮助教程</a></li>
                 </ul>
             </div>
-            <div><img src='Images/banner.jpg' /></div>
+   <!--         <div><img src='Images/banner.jpg' /></div>-->
             <div id="content1">
                 <div id="tabCot_product">
                     <!--area6-->
