--- a/top/indexkai.html
+++ b/top/indexkai.html
@@ -13,12 +13,15 @@
 <div id="header">
     <div id="site-nav" style="margin-bottom:5px;">
 	    <p class="login-info">
-            <script language="javascript" type="text/javascript" src="js_userinfokai.aspx"></script> 
             在线客服：
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" ><img border="0" align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" alt="有问题请点这里" /></a>
+        
+            亲，欢迎光临催单有礼  <a href='logout.aspx'>【点击退出】</a>
+
         </p>
         <ul class="quick-menu">
             <li>
+            <a href="kaixiang/index.html#" target="mainframe">帮助中心</a>
             </li>       
         </ul>
     </div>
@@ -56,8 +59,6 @@
 <button class="menu-close">-</button>
 </h3>
 <ul class="group">
-		<li ><span> <a
-		href="kaixiang/couponlist.aspx" target="mainframe">二维码设置</a></span></li>	
 		<li ><span> <a
 		href="kaixiang/couponlist.aspx" target="mainframe">优惠券管理</a></span></li>		
 		<li ><span> <a
