--- a/top/CustomerServiceAchievements/Search.Web/index.html
+++ b/top/CustomerServiceAchievements/Search.Web/index.html
@@ -143,7 +143,7 @@
                                                     -</button>
                                             </h3>
                                             <ul class="group">
-                                                <li><span><a href="http://ding.7fshop.com/help/help.html" target="mainframe6">帮助教程</a></span></li>
+                                                <li><span><a href="http://prom.7fshop.com/help/help.html" target="mainframe6">帮助教程</a></span></li>
                                             </ul>
                                         </div>
                                     </div>
