--- a/top/CustomerServiceAchievements/CusServiceAchievements.Web/help/help.html
+++ b/top/CustomerServiceAchievements/CusServiceAchievements.Web/help/help.html
@@ -35,21 +35,21 @@
             <h2>客服绩效考核</h2>
             <div id="topmenu">
                 <ul>
-                    <li class="current"><a href="default2.aspx">主页</a></li>
-                    <li><a href="ReceiveCustomer.aspx">日统计</a></li>
-                    <li><a href="YejiTotal2.aspx">业绩统计</a></li>
-                    <li><a href="AllTalkContent.aspx">聊天记录</a></li>
-                    <li><a href="GroupReceiveCustomer.aspx">客服对比</a></li>
+                    <li class="current"><a href="../default2.aspx">主页</a></li>
+                    <li><a href="../ReceiveCustomer.aspx">日统计</a></li>
+                    <li><a href="../YejiTotal2.aspx">业绩统计</a></li>
+                    <li><a href="../AllTalkContent.aspx">聊天记录</a></li>
+                    <li><a href="../GroupReceiveCustomer.aspx">客服对比</a></li>
                 </ul>
             </div>
         </div>
         <div id="top-panel">
             <div id="panel">
                 <ul>
-                   <li><a href="/ReceiveCustomer.aspx" class="report">日统计</a></li>
-                   <li><a href="/YejiTotal2.aspx" class="folder_table">业绩统计</a></li>
-                   <li><a href="/AllTalkContent.aspx" class="invoices">聊天记录</a></li>
-                   <li><a href="/GroupReceiveCustomer.aspx" class="user">客服对比</a></li>
+                   <li><a href="../ReceiveCustomer.aspx" class="report">日统计</a></li>
+                   <li><a href="../YejiTotal2.aspx" class="folder_table">业绩统计</a></li>
+                   <li><a href="../AllTalkContent.aspx" class="invoices">聊天记录</a></li>
+                   <li><a href="../GroupReceiveCustomer.aspx" class="user">客服对比</a></li>
                 </ul>
             </div>
         </div>
