--- a/top/CustomerServiceAchievements/CusServiceAchievements.Web/help/help.html
+++ b/top/CustomerServiceAchievements/CusServiceAchievements.Web/help/help.html
@@ -28,7 +28,7 @@
                             alt="有问题请点这里" /></a>
                 </p>
                 <ul class="quick-menu">
-                    <li><a href="help/help.html" style="color:White">帮助教程</a></li>
+                    <li><a href="#" style="color:White">帮助教程</a></li>
                 </ul>
             </div>
         
@@ -68,7 +68,21 @@
                     </p>
                 </div>--%>
                 <div>
-                    <img src="" />
+                网站主页显示10位当天接待用户
+                <br />
+                    <img src="images/1.jpg" />
+                    <br />
+                      查看每天接待的用户及成功下单情况
+                <br />
+                    <img src="images/2.jpg" />
+                    <br />
+                    查看指定时间段的客服绩效
+                <br />
+                    <img src="images/3.jpg" />
+                    <br />
+                      查看指定时间客服的聊天记录
+                <br />
+                    <img src="images/4.jpg" />
                     
                 </div>
             </div>
