--- a/top/CustomerServiceAchievements/CusServiceAchievements.Web/help/help.html
+++ b/top/CustomerServiceAchievements/CusServiceAchievements.Web/help/help.html
@@ -70,19 +70,19 @@
                 <div>
                 网站主页显示10位当天接待用户
                 <br />
-                    <img src="images/1.jpg" />
+                    <img src="images/1.jpg" width="740px" />
                     <br />
                       查看每天接待的用户及成功下单情况
                 <br />
-                    <img src="images/2.jpg" />
+                    <img src="images/2.jpg" width="740px" />
                     <br />
                     查看指定时间段的客服绩效
                 <br />
-                    <img src="images/3.jpg" />
+                    <img src="images/3.jpg" width="740px" />
                     <br />
                       查看指定时间客服的聊天记录
                 <br />
-                    <img src="images/4.jpg" />
+                    <img src="images/4.jpg" width="740px" />
                     
                 </div>
             </div>
