--- a/top/indexkai.html
+++ b/top/indexkai.html
@@ -16,7 +16,7 @@
             在线客服：
             <a target="_blank" href="http://amos.im.alisoft.com/msg.aw?v=2&uid=%E7%BE%8E%E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" ><img border="0" align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6%9D%9C%E8%8E%8E%E4%B9%8B%E5%BF%83&site=cntaobao&s=1&charset=utf-8" alt="有问题请点这里" /></a>
         
-            亲，欢迎光临催单有礼  <a href='logout.aspx'>【点击退出】</a>
+            亲，欢迎光临开箱有礼  <a href='logout.aspx'>【点击退出】</a>
 
         </p>
         <ul class="quick-menu">
