--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -221,11 +221,7 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/reviewnew/couponlist.aspx" target="mainframe2">优惠券管理</a></span></li>		
-		<li ><span> <a
-		href="http://haoping.7fshop.com/top/reviewnew/couponsend.aspx" target="mainframe2">优惠券赠送记录</a></span></li>		
-		<li ><span> <a
-		href="http://haoping.7fshop.com/top/reviewnew/msgsend.aspx" target="mainframe2">手动赠送</a></span></li>		
+		href="http://haoping.7fshop.com/top/reviewnew/msgsend.aspx" target="mainframe2">优惠券批量赠送</a></span></li>		
     </ul>
 </div>
 
