--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -238,6 +238,17 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
     </ul>
 </div>
 
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 二次销售统计 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/saletotal.aspx" target="mainframe2">二次销售总览</a></span></li>		
+		<li><span> <a href="http://haoping.7fshop.com/top/reviewnew/salelist.aspx" target="mainframe2">二次销售详情</a></span></li>		
+	</ul>
+</div>
+
 </div>
 <!--content-->
             </div>
