--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -221,7 +221,9 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 </h3>
 <ul class="group">
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/reviewnew/msgsend.aspx" target="mainframe2">优惠券批量赠送</a></span></li>		
+		href="http://haoping.7fshop.com/top/reviewnew/couponlist.aspx" target="mainframe2">优惠券管理</a></span></li>		
+		<li ><span> <a
+		href="http://haoping.7fshop.com/top/reviewnew/msgsend.aspx" target="mainframe2">优惠券赠送</a></span></li>		
     </ul>
 </div>
 
@@ -322,10 +324,8 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 <h3 class="mytaobao-bar"><span> 优惠券赠送 </span>
 <button class="menu-close">-</button>
 </h3>
-<ul class="group">
-		<li><span> <a href="http://haoping.7fshop.com/top/crm/couponlist.aspx" target="mainframe5">优惠券管理</a></span></li>		
-		<li><span> <a href="http://haoping.7fshop.com/top/crm/couponsend.aspx" target="mainframe5">优惠券赠送记录</a></span></li>		
-		<li><span> <a href="http://haoping.7fshop.com/top/crm/msgsend.aspx" target="mainframe5">手动赠送</a></span></li>		
+<ul class="group">		
+		<li><span> <a href="http://haoping.7fshop.com/top/crm/msgsend.aspx" target="mainframe5">优惠券批量赠送</a></span></li>		
     </ul>
 </div>
 
