--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -223,7 +223,9 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 		<li ><span> <a
 		href="http://haoping.7fshop.com/top/reviewnew/couponlist.aspx" target="mainframe2">优惠券管理</a></span></li>		
 		<li ><span> <a
-		href="http://haoping.7fshop.com/top/reviewnew/msgsend.aspx" target="mainframe2">优惠券赠送</a></span></li>		
+		href="http://haoping.7fshop.com/top/reviewnew/couponsend.aspx" target="mainframe2">赠送记录</a></span></li>	
+        <li ><span> <a
+		href="http://haoping.7fshop.com/top/reviewnew/msgsend.aspx" target="mainframe2">手动赠送</a></span></li>	
     </ul>
 </div>
 
