--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -291,6 +291,19 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
 
 
 <div class="menu-box">
+<h3 class="mytaobao-bar"><span> 营销计划 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/crm/missionadd.aspx" target="mainframe5">营销计划创建</a></span></li>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/crm/missionlist.aspx" target="mainframe5">营销计划列表</a></span></li>
+    </ul>
+</div>
+
+
+<div class="menu-box">
 <h3 class="mytaobao-bar"><span> 按购买次数区别 </span>
 <button class="menu-close">-</button>
 </h3>
@@ -304,23 +317,6 @@ name="mainframe1" src="http://groupbuy.7fshop.com/top/groupbuy/groupbuyadd.aspx"
     </ul>
 </div>
 
-<div class="menu-box">
-<h3 class="mytaobao-bar"><span> 按用户组区别 </span>
-<button class="menu-close">-</button>
-</h3>
-<ul class="group">
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=a" target="mainframe5">未购买</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=b" target="mainframe5">普通会员</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=c" target="mainframe5">高级会员</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=d" target="mainframe5">VIP会员</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/crm/customlist.aspx?count=e" target="mainframe5">至尊VIP会员</a></span></li>
-    </ul>
-</div>
 
 <div class="menu-box">
 <h3 class="mytaobao-bar"><span> 优惠券赠送 </span>
