--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -49,6 +49,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=%E7%BE%8E%E6
    <li><a href="javascript:void(0)" title="团购营销" rel="2">团购营销</a></li>
    <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
    <li><a href="javascript:void(0)" title="客户关系营销" rel="4">客户关系营销</a></li>
+   <li><a href="javascript:void(0)" title="包邮卡" rel="5">包邮卡</a></li>
    <li><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
 </ul>
 </div>
@@ -342,7 +343,44 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 </div>
 
 
+<div id="tabCot_product_5" class="tabCot" style="padding:2px 0 0 0; display:none">
+    <div id="mytaobao-panel" class="grid-c2">
+        <div class="col-sub">
+            <div id="mytaobao-menu" class="box-diamond">
+<!--content-->
 
+<div class="mytaobao-bd">
+
+
+
+
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 包邮卡 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/freecard/freecardadd.aspx" target="mainframe5">创建包邮卡</a></span></li>
+		<li><span> <a
+		href="http://haoping.7fshop.com/top/freecard/freecardlist.aspx" target="mainframe5">包邮卡清单</a></span></li>
+	<li><span> <a
+		href="http://haoping.7fshop.com/top/freecard/freecardcustomer.aspx" target="mainframe5">赠送记录</a></span></li>
+	</ul>
+</div>
+
+
+</div>
+<!--content-->
+            </div>
+        </div>
+        
+        <div style="width:780px; margin-left:10px; float:left; height:1220px;">
+                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" 
+
+name="mainframe5" src="http://haoping.7fshop.com/top/freecard/freecardadd.aspx" frameborder="0" scrolling="no"></iframe>
+        </div>
+    </div>
+</div>
 
 
 </div>
