--- a/top/indexnew.html
+++ b/top/indexnew.html
@@ -365,6 +365,8 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 		href="http://haoping.7fshop.com/top/freecard/freecardlist.aspx" target="mainframe6">包邮卡清单</a></span></li>
 	<li><span> <a
 		href="http://haoping.7fshop.com/top/freecard/freecardcustomer.aspx" target="mainframe6">赠送记录</a></span></li>
+	<li><span> <a
+		href="http://haoping.7fshop.com/top/freecard/freecardsend.aspx" target="mainframe6">手动赠送</a></span></li>
 	</ul>
 </div>
 
