--- a/top/indexgroup2.html
+++ b/top/indexgroup2.html
@@ -88,6 +88,30 @@
 		href="groupbuy/groupbuy/activityshowitem.aspx" target="mainframe">促销商品管理</a></span></li>
     </ul>
 </div>
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 橱窗模板设计 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="groupbuy/groupbuy/activitysettemp.aspx" target="mainframe">设计橱窗模板</a></span></li>	
+        <li><span> <a
+		href="groupbuy/groupbuy/activitytempmanage.aspx" target="mainframe">橱窗模板管理</a></span></li>
+    </ul>
+</div>
+<div class="menu-box">
+<h3 class="mytaobao-bar"><span> 橱窗模板安装/删除 </span>
+<button class="menu-close">-</button>
+</h3>
+<ul class="group">
+		<li><span> <a
+		href="groupbuy/groupbuy/activityInstalltemp.aspx?ty=hand" target="mainframe">手动安装模板</a></span></li>	
+        <li><span> <a
+		href="groupbuy/groupbuy/activityInstalltemp.aspx?ty=auto" target="mainframe">自动安装模板</a></span></li>
+        <li><span> <a
+		href="groupbuy/groupbuy/activitydeltemp.aspx" target="mainframe">删除橱窗模板</a></span></li>
+    </ul>
+</div>
 
 <!--<div class="menu-box">
 <h3 class="mytaobao-bar"><span> 帮助教程 </span>
