--- a/top/indexgroup2.html
+++ b/top/indexgroup2.html
@@ -69,10 +69,10 @@
 		href="groupbuy/addtotaobao-1.aspx" target="mainframe">更新宝贝描述</a></span></li>		
 		<li ><span> <a
 		href="groupbuy/missionlist.aspx" target="mainframe">任务列表</a></span></li>		
-		<li ><span> <a
+<!--		<li ><span> <a
 		href="groupbuy/autocancle.aspx" target="mainframe">自动取消未付款订单</a></span></li>		
 		<li ><span> <a
-		href="groupbuy/build.aspx" target="mainframe">团购站外推广</a></span></li>			
+		href="groupbuy/build.aspx" target="mainframe">团购站外推广</a></span></li>	-->		
     </ul>
 </div>
 <div class="menu-box">
